# synaesthesia

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/get-started/: installation.rst
src/synaesthesia/: abstract_dataset.py  boundary_create.py  boundary_filter.py  boundary_filtered_dataset.py  collates.py  concat_dataset.py  csv_dataset.py  custom_transformations.py  datamodule.py  eui_dataset.py  euv_dataset.py  fism_dataset.py  fl2cme_create.py  fl2cme_create_2D.py  flarelabel_dataset.py  globus_dataset.py  goes_xray_dataset.py  magnetogram_dataset.py  multi_signal_dataset.py  samplers.py  sdo_embeddings_dataset.py  sdo_euv_dataset.py  sdo_magnetogram_dataset.py  sdo_ml_dataset.py  sdo_ml_dataset_prep.py  sequential_dataset.py  so_euv_dataset.py  so_radio_dataset.py  solo_euv_dataset.py  solo_magnetogram_dataset.py  solo_xray_dataset.py  stereo_coronagraph_dataset.py  stereoeuv_dataset.py  stero_coronagraph_dataset.py  timestamped_sdoml_dataset.py  utils.py  xray_dataset.py  xray_flarelabel_dataset.py
src/synaesthesia/abstract/: boundary_filtered_dataset.py  concat_dataset.py  conversion.py  dataset_base.py  filter_functions.py  multi_signal_dataset.py  sequential_dataset.py  utils.py
src/synaesthesia/base_sensors/: csv_dataset.py  euv_dataset.py  image_dataset.py  multi_spectral_imager_dataset.py
tests/: simple_csv_dataset.py  test_collates.py  test_concat_dataset.py  test_filter_functions.py  test_multi_signal_dataset.py  test_sequential_dataset.py  test_simple_csv_dataset.py  test_simple_image_dataset.py  test_utils.py
tests/test_data/: test_data_10_s_concat_test.csv  test_data_30_s.csv
