[tool.poetry]
name = "synaesthesia"
version = "0.1.0"
description = ""
authors = ["Daniele De Martini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.4.0"
torch = "^2.4.1"
pandas = "^2.2.2"
loguru = "^0.7.2"
kornia = "^0.7.3"
pyinputplus = "^0.2.12"
hydra-core = "^1.3.2"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pylint = "^3.2.7"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
